--- a/fullstack/client/package.json
+++ b/fullstack/client/package.json
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
