--- a/fullstack/client/package.json
+++ b/fullstack/client/package.json
@@ -38,6 +38,7 @@
     "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
